# MailSensei

./: .env.example  .gitignore  .replit  APIDOC.md  LLM.py  README.md  Reademe.md  Readme.md  app.py  email_utils.py  main.py  pyproject.toml  requirements.txt  server.py  setup.py  streamlit_app.py  streamlit_app.spec  test.py
app/: LLM.py  email_utils.py  streamlit_app.py  test.py
assets/: logo_base64.txt  styles.css  template.html
cache/models--sshleifer--distilbart-cnn-12-6/refs/: main
cache/models--sshleifer--distilbart-cnn-12-6/snapshots/a4f8f3ea906ed274767e9906dbaede7531d660ff/: config.json
logs/: README.md
src/: server.py
src/utils/: __init__.py  email_utils.py  hf_utils.py  llm_pipelines.py  llm_utils.py
